examples/test/testpolicy2345.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2345
  namespace: namespace284
spec:
  podSelector:
    matchLabels:
      key46: value12
      key44: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value23
      podSelector:
        matchLabels:
          key0: value7
          key48: value43
          key6: value23
